--- a/src/app/features/home/topbar/topbar.component.html
+++ b/src/app/features/home/topbar/topbar.component.html
@@ -9,7 +9,7 @@
 
   <!-- Acciones (derecha) -->
   <div>
-    <h4>{{correo}} |</h4>
+    <h4 class="usuario-login">{{correo}} |</h4>
   </div>
   <div class="toolbar-actions">
     <button mat-icon-button matTooltip="cerrar sesión" (click)="cerrarSesion()">
