--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -19,3 +19,19 @@
     border-radius: 8px; /* Bordes redondeados */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave (opcional) */
 }
+
+/* Tablet (ejemplo: <= 768px) */
+@media (max-width: 768px) {
+  .form-container {
+    padding: 40px;
+    width: 350px;
+  }
+}
+
+/* Celular (ejemplo: <= 480px) */
+@media (max-width: 480px) {
+  .form-container {
+    padding: 20px;
+    width: 300px;
+  }
+}
